<resources>

    <string name="app_name">DiaryBook</string>

    <!-- Firebase Auth -->
    <string name="default_web_client_id">885806604798-ukhq58ofalm3psr5v4mgptsqe41h7bc9.apps.googleusercontent.com</string>

    <!-- Formats -->
    <string name="date_format">%02d/%02d/%04d</string>
    <string name="hour_format">%02d:%02d</string>

    <!-- Activity Item -->
    <string name="activity_item_title_tool">Título actividad</string>
    <string name="activity_item_description_tool">Descripción actividad</string>

    <!-- Create Activity -->
    <string name="create_activity_button_add_event">Evento</string>
    <string name="create_activity_button_add_task">Tarea</string>
    <string name="create_activity_button_create">Crear</string>

    <!-- Create Form -->
    <string name="create_form_title">Título</string>
    <string name="create_form_description">Descripción</string>
    <string name="create_form_duration">Duración (min)</string>
    <string name="create_form_date">Fecha</string>
    <string name="create_form_hour">Hora</string>

    <!-- Navigation menu -->
    <string name="home_title">Inicio</string>
    <string name="events_title">Eventos</string>
    <string name="today_title">Hoy</string>
    <string name="tasks_title">Tareas</string>
    <string name="login_title">Login</string>
    <string name="profile_title">Perfil</string>
    <string name="create_activity_title">Crear actividad</string>
    <string name="detail_event_title">Detalle del evento</string>
    <string name="detail_task_title">Detalle de la tarea</string>
    <string name="today_task_add_title">Añadir tarea</string>

    <!-- Login Fragment y Create Fragment -->
    <string name="login_input_email">Correo electrónico</string>
    <string name="login_input_password">Contraseña</string>

    <!-- Login Fragment -->
    <string name="login_title_text">Inicia sesión</string>
    <string name="login_sign_in_button">Iniciar sesión</string>

    <!-- Create Fragment -->
    <string name="create_title">Crear cuenta</string>
    <string name="create_input_name">Nombre</string>

    <!-- Profile Fragment -->
    <string name="profile_head_title_tool">Hola $name</string>
    <string name="profile_head_title">Hola %1$s</string>
    <string name="profile_head_email_tool">email@gmail.com</string>
    <string name="profile_pending_activities_title">Actividades pendientes</string>
    <string name="profile_completed_activities_title">Actividades completadas</string>
    <string name="profile_events_text">Eventos:</string>
    <string name="profile_tasks_text">Tareas:</string>
    <string name="profile_activities_number">0</string>
    <string name="profile_action_user_logout">Cerrar sesión</string>
    <string name="profile_action_user_delete">Borrar cuenta</string>

    <!-- Delete Dialog -->
    <string name="profile_delete_title">Confirmar eliminación de la cuenta</string>
    <string name="profile_delete_description">Introducir email y contraseña:</string>
    <string name="profile_delete_button_accept">Aceptar</string>
    <string name="profile_delete_button_cancel">Cancelar</string>

    <!-- Event Detail Fragment -->
    <string name="event_date_tool">00/00/0000</string>
    <string name="event_hour_tool">00:00</string>
    <string name="event_duration_tool">000</string>
    <string name="event_duration_hint">min</string>

</resources>