<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/activity_list_fragment"
        android:icon="@drawable/ic_calendar"
        android:title="@string/home_title" />

    <item
        android:id="@+id/event_list_fragment"
        android:icon="@drawable/ic_events"
        android:title="@string/events_title" />

    <item
        android:id="@+id/today"
        android:enabled="false"
        android:icon="@drawable/ic_invisible"
        android:title="" />

    <item
        android:id="@+id/task_list_fragment"
        android:icon="@drawable/ic_tasks"
        android:title="@string/tasks_title" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile_title" />

</menu>