<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/activity_list_fragment">

    <fragment
        android:id="@+id/activity_list_fragment"
        android:name="edu.iesam.diarybook.presentation.ActivityListFragment"
        android:label="@string/home_title"
        tools:layout="@layout/fragment_activity_list" />

    <fragment
        android:id="@+id/event_list_fragment"
        android:name="edu.iesam.diarybook.features.event.presentation.EventListFragment"
        android:label="@string/events_title"
        tools:layout="@layout/fragment_activity_list" />

    <fragment
        android:id="@+id/task_list_fragment"
        android:name="edu.iesam.diarybook.features.task.presentation.TaskListFragment"
        android:label="@string/tasks_title"
        tools:layout="@layout/fragment_activity_list" />

    <fragment
        android:id="@+id/login_fragment"
        android:name="edu.iesam.diarybook.features.login.presentation.LoginFragment"
        android:label="@string/login_title"
        tools:layout="@layout/fragment_user" />

</navigation>