<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/login_background">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_title"
        style="@style/login_title"
        android:text="@string/login_title_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        style="@style/login_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/login_title">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/login_input"
            android:hint="@string/login_input_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/login_input_password"
            android:hint="@string/login_input_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                style="@style/login_input_password_text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/sign_in_button"
            style="@style/login_button">

            <com.google.android.material.textview.MaterialTextView
                style="@style/login_button_text"
                android:text="@string/login_sign_in_button" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/login_divider"
            style="@style/login_divider" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/login_create_button"
                style="@style/login_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    style="@style/login_button_text"
                    android:text="@string/create_title" />

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>